@startuml

interface GameStart {

    + paint(): void
    + main(String[]): void
}

interface HeadObj {
    +move (): void
   

}

interface FoodObj {
    +getFood (): FoodObj

}
interface BodyObj {

}

class GameObj{
- Image img;
- int x;
- int y;
- width: int
- height: int 
+ frame: GameStart
- score: int 


}

class Img{
	-<static> head_down: Image
	-<static> head_up: Image
	-<static> head_left: Image
	-<static> head_right: Image
	-<static> body: Image
	-<static> food: Image
	+<static> WriteText(): void
}

GameStart "1" --* "n" BodyObj
GameStart "1" --* "1" HeadObj
GameStart "1" --o "1" FoodObj
GameStart  --|> Jframe
BodyObj --> Img
HeadObj --> Img
FoodObj --> Img
GameStart --> Img
FoodObj --|> GameObj
HeadObj -|> GameObj
BodyObj --|> GameObj
HeadObj -- FoodObj
HeadObj -- BodyObj
@enduml

